--- a/c_code/a_basic/html/animation.html
+++ b/c_code/a_basic/html/animation.html
@@ -3,6 +3,7 @@
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../fonts/fontsasome/css/all.css">
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <link rel="stylesheet" href="../css/src/animation.css">
@@ -18,18 +19,19 @@
     <div class="part">
       <h3></h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">link_01</a></li>
+        <li><a href="#">link_02</a></li>
+        <li><a href="#">link_03</a></li>
+        <li><a href="#">link_04</a></li>
+        <li><a href="#">link_05</a></li>
+        <li><a href="#">link_06</a></li>
+        <li><a href="#">link_07</a></li>
+        <li><a href="#">link_08</a></li>
+        <li><a href="#">link_09</a></li>
+        <li><a href="#">link_10</a></li>
       </ul>
     </div>
+    <div class="arrow"><i class="fas fa-arrow-down"></i></div>
   </div>
   <script src="파일이름.js"></script>
 </body>
