--- a/c_code/e_jquery/html/ex_03_modal.html
+++ b/c_code/e_jquery/html/ex_03_modal.html
@@ -32,23 +32,22 @@
   <div class="modal_01">
     <h2>modal window</h2>
     <ul class="clearfix">
-      <li data-big="juice_small_01.jpg"><button type="button"><span>이미지_01</span></button></li>
-      <li data-big="juice_small_02.jpg"><button type="button"><span>이미지_02</span></button></li>
-      <li data-big="juice_small_03.jpg"><button type="button"><span>이미지_03</span></button></li>
-      <li data-big="juice_small_04.jpg"><button type="button"><span>이미지_04</span></button></li>
+      <!-- <li data-big="juice_small_01.jpg" data-text="이미지에 대한 설명 01 lorem2"><button type="button"><span>이미지_01</span></button></li>
+      <li data-big="juice_small_02.jpg" data-text="이미지에 대한 설명 02 lorem5"><button type="button"><span>이미지_02</span></button></li>
+      <li data-big="juice_small_03.jpg" data-text="이미지에 대한 설명 03 lorem10"><button type="button"><span>이미지_03</span></button></li>
+      <li data-big="juice_small_04.jpg" data-text="이미지에 대한 설명 04 lorem3"><button type="button"><span>이미지_04</span></button></li> -->
     </ul>
   </div>
 
 
-  <div class="gallery_box">
+  <!-- <div class="gallery_box">
     <div class="gallery_area">
       <div class="close"><button type="button"><span>닫기</span></button></div>
       <div class="big_img">
-        <!-- background-image -->
         <p>narration</p>
       </div>
     </div>
-  </div> 
+  </div>  -->
 
 
 </div>
