--- a/c_code/e_jquery/html/rwdTemp/rwdtemp_mobile.html
+++ b/c_code/e_jquery/html/rwdTemp/rwdtemp_mobile.html
@@ -1,6 +1,7 @@
-<!-- rwdtemp_mobile.html -->
+<!-- rwdTemp_mobile.html -->
 
 <h2>모바일 광고영역</h2>
-<div class="moblie">
+<div class="mobile">
   <img src="../img/modal/juice_big_02.jpg" alt="">
 </div>
+<script src="rwdTemp_mobile.js"></script>
