--- a/c_code/e_jquery/html/rwdTemp/rwdtemp_pc.html
+++ b/c_code/e_jquery/html/rwdTemp/rwdtemp_pc.html
@@ -1,7 +1,12 @@
-<!-- rwdtemp_pc.html -->
+<!-- rwdTemp_pc.html -->
 
-<h2> pc 광고영역</h2>
-
+<h2>피씨 광고영역</h2>
 <div class="pc">
-  <img src="../img/modal/juice_big_01.jpg" alt="">
+  <video poster="../img/modal/juice_big_01.jpg">
+    <!-- <source src=".ogg" type="video/ogg">
+    <source src=".webm" type="video/webm">
+    <source src=".mp4" type="video/mp4"> -->
+      <img src="../img/modal/juice_big_05.jpg" alt="">
+  </video>
 </div>
+<script src="rwdTemp_pc.js"></script>
