--- a/c_code/e_jquery/html/rwdTemp/rwdtemp_tablet.html
+++ b/c_code/e_jquery/html/rwdTemp/rwdtemp_tablet.html
@@ -1,8 +1,8 @@
-<!-- rwdtemp_tablet.html -->
+<!-- rwdTemp_tablet.html -->
 
 <h2>태블릿 광고영역</h2>
-
-      <div class="tablet">
-        <img src="../img/modal/juice_big_03.jpg" alt="">
-        <img src="../img/modal/juice_big_04.jpg" alt="">
-      </div>
+<div class="tablet">
+  <img src="../img/modal/juice_big_03.jpg" alt="">
+  <img src="../img/modal/juice_big_04.jpg" alt="">
+</div>
+<script src="../js/rwdTemp_tablet.js"></script>
