--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -29,7 +29,8 @@
       <header id="headBox">
         <h1><a href="./19tea_main.html"><span class="hidden_context">19티</span></a></h1>
         <nav id="gnbBox">
-          <h2 class="hidden_context">19티 전체 메뉴</h2>   
+          <h2 class="hidden_context">19티 전체 메뉴</h2>
+          <div class="gnb_button"><button type="button"><span class="hidden_context">메뉴버튼</span></button></div>   
           <div class="gnb_area">
             <div class="gnb_close">
               <button type="button"><span class=hidden_context>닫기</span></button>
