19tea_main_jquey_view...

--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -26,7 +26,7 @@
 <!-- layout -->
   <div id="wrap">
     <div class="head_area">
-      <header id="headBox">
+      <header id="headBox" class="clearfix">
         <h1><a href="./19tea_main.html"><span class="hidden_context">19티</span></a></h1>
         <nav id="gnbBox">
           <h2 class="hidden_context">19티 전체 메뉴</h2>
