--- a/c_code/e_jquery/html/ex_05_rwdtemp.html
+++ b/c_code/e_jquery/html/ex_05_rwdtemp.html
@@ -4,6 +4,7 @@
 <head>
  <link rel="stylesheet" href="../css/base/reset.css">
  <link rel="stylesheet" href="../css/base/common.css">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta charset="UTF-8">
  <link rel="stylesheet" href="../css/src/ex_05_rwdtemp.css">
  <title>Document</title>
@@ -21,6 +22,6 @@
   <script src="../js/base/jquery-3.5.1.js"></script>
   <script src="../js/base/jquery-ui.js"></script>
  <script src="../js/src/ex_05_rwdtemp.js"></script>
- <script src="../js/src/ex_05_redtemp_import_module.js"></script>
+ <script src="../js/src/ex_05_redTemp_import_module.js"></script>
 </body>
 </html>
