--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -29,6 +29,8 @@
       <li><a href="./ex_03_modal.html">모달윈도우</a></li>
       <li><a href="./ex_04_onepageScroll.html">스크롤시 상단고정처리, 클릭시 해당페이지 이동</a></li>
       <li><a href="./ex_05_rwdtemp.html">js를 반응형으로 구현하기</a></li>
+      <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr>영역구성하기</a></li>
+      <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
 
 
       <li><a href="./re.html">eef</a></li>
