19tea_main_jQuery_end

--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -19,8 +19,8 @@
 
  <title>19tea</title>
 
-<link rel="shortcut icon" href="icon이름.png" type="image/png">
-<link rel="apple-touch-icon" href="icon이름.png">
+<link rel="shortcut icon" href="../19tea_icon.png" type="image/png">
+<link rel="apple-touch-icon" href="../19tea_icon.png">
 </head>
 <body>
 <!-- layout -->
@@ -85,15 +85,15 @@
     <section id="viewBox">
       <h2 class="hidden_context">광고영역</h2>
       <div class="view_area">
-        <ul class="view_con">
-          <li class="view_img_01"><a href="#"><span class="hidden_context">광고 이미지 01</span></a></li>
-          <li class="view_img_02"><a href="#"><span class="hidden_context">광고 이미지 02</span></a></li>
-          <li class="view_img_03"><a href="#"><span class="hidden_context">광고 이미지 03</span></a></li>
-        </ul>
         <ul class="view_indicator">
           <li class="action"><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
           <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
           <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
+        </ul>
+        <ul class="view_con">
+          <li class="view_img_01"><a href="#"><span class="hidden_context">광고 이미지 01</span></a></li>
+          <li class="view_img_02"><a href="#"><span class="hidden_context">광고 이미지 02</span></a></li>
+          <li class="view_img_03"><a href="#"><span class="hidden_context">광고 이미지 03</span></a></li>
         </ul>
       </div>
     </section>
@@ -106,9 +106,14 @@
           <span class="hidden_context">다음</span>
           </button>
         </div>
+        <!-- <div class="prev_btn">
+          <button type="button">
+            <span class="hidden_context">이전</span>
+          </button>
+        </div> -->
         <div class="advantages_con">
           <ul>
-            <li class="advantages_img_01"><span>19티는 가격이 착합니다</span></li>
+            <li class="advantages_img_01 action"><span>19티는 가격이 착합니다</span></li>
               <li class="advantages_img_02"><span>19티는 건강 합니다</span></li>
           </ul>
         </div>
