--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -24,6 +24,7 @@
       <h2>샘플 예제</h2>
       <li><a href="./sample_on.html">sample_slide_douw_up</a></li>
       <li><a href="./ex_01_accordion.html">accordion</a></li>
+      <li><a href="./ex_02_accordion.html">accordion_2</a></li>
       <li><a href="./ex_02_slideBtnBanner.html">slideBtnBanner</a></li>
       <!-- <li><a href="./ex_03_fancybox_plugin.html">fancybox_plugin</a></li> -->
       <li><a href="./ex_03_modal.html">모달윈도우</a></li>
