--- a/c_code/c_sample_web/index.html
+++ b/c_code/c_sample_web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <script>
-    window.location = "./html/q_02_silde.html";
+    window.location = "./html/monfee_main.html";
   </script>
 </body>
 </html>
