--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -32,6 +32,9 @@
       <li><a href="./ex_05_rwdtemp.html">js를 반응형으로 구현하기</a></li>
       <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr>영역구성하기</a></li>
       <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
+      
+      <h2>시험예제</h2>
+      <li><a href="./test_01.html">test_11_25</a></li>
 
 
       <li><a href="./re.html">eef</a></li>
