--- a/c_code/test_11_25/html/test_11_25.html
+++ b/c_code/test_11_25/html/test_11_25.html
@@ -31,6 +31,11 @@
     </header>
     <section id="viewBox">
       <h2 class="hidden_context" >광고영역</h2>
+      <div class="count_page">
+        <span class="count"></span>
+        <p>/</p>
+        <span class="all"></span>
+      </div>
       <div class="view_link">
           <ul class="indicator">
             <li class="action"><a href="#"><span class="hidden_context">인디케이터_01</span></a></li>
