19tea_main_js and brand~ing

--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -10,7 +10,7 @@
 
  <link rel="stylesheet" href="../css/base/reset.css">
  <link rel="stylesheet" href="../css/base/common.css">
- <link rel="stylesheet" href="../css/src/19tea_main.css">
+ <link rel="stylesheet" href="../css/src/main/19tea_main.css">
 
 <!--[if IE]>
 <script src="../ie/modernizr-custom.js"></script>
@@ -39,7 +39,7 @@
               <li>
                 <a href="#">브랜드스토리</a>
                 <ul class="gnb_sub_menu">
-                  <li><a href="#">브랜드소개</a></li>
+                  <li><a href="./19tea_brand.html">브랜드소개</a></li>
                   <li><a href="#">찾아오는길</a></li>
                 </ul>
               </li>
@@ -85,11 +85,13 @@
     <section id="viewBox">
       <h2 class="hidden_context">광고영역</h2>
       <div class="view_area">
-        <ul class="view_indicator">
-          <li class="action"><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
-          <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
-          <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
-        </ul>
+          <div class="view_indi_area">
+            <ul class="view_indicator">
+              <li class="action"><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
+              <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
+              <li><a href="#"><span class="hidden_context">해당 광고 이미지의 내용으로 이동</span></a></li>
+          </ul>
+        </div>
         <ul class="view_con">
           <li class="view_img_01"><a href="#"><span class="hidden_context">광고 이미지 01</span></a></li>
           <li class="view_img_02"><a href="#"><span class="hidden_context">광고 이미지 02</span></a></li>
@@ -179,6 +181,8 @@
 
  <script src="../js/base/jquery-3.5.1.js"></script>
  <script src="../js/base/jquery-ui.js"></script>
- <script src="../js/src/19tea_main.js"></script>
+ <script src="../js/src/19tea_rwdTemp.js"></script>
+ <script src="../js/src/19tea_rwdTemp_import_module.js"></script>
+ <!-- <script src="../js/src/19tea_main.js"></script> -->
 </body>
 </html>
