19tea_main re, sub

--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -108,11 +108,6 @@
           <span class="hidden_context">다음</span>
           </button>
         </div>
-        <!-- <div class="prev_btn">
-          <button type="button">
-            <span class="hidden_context">이전</span>
-          </button>
-        </div> -->
         <div class="advantages_con">
           <ul>
             <li class="advantages_img_01 action"><span>19티는 가격이 착합니다</span></li>
@@ -122,7 +117,7 @@
     </div>
     </article>
     <!--//advantagesBox -->
-    <article id="promptionBox">
+    <article id="promotionBox">
       <h2>19티 후기</h2>
       <div class="video_area">
         <div class="video_con">
