--- a/19tea_web/html/19tea_brand.html
+++ b/19tea_web/html/19tea_brand.html
@@ -83,7 +83,63 @@
     </header>
   </div>
 <!-- //headBox -->
-  <article id=""></article>
+  <article id="introductionBox">
+    <h2>브랜드 소개</h2>
+    <div class="introduction_area">
+      <div class="next_btn">
+        <button type="button">
+        <span class="hidden_context">다음</span>
+        </button>
+      </div>
+      <div class="introduction_con">
+        <ul>
+          <li class="introduction_img_01 action">
+            <span>“밀크티의 본질 = 맛있는 차”<br />
+            좋은 찻잎으로귀한 마음으로 대접 합니다.
+          </span>
+        </li>
+            <li class="introduction_img_02">
+              <span>
+                대한민국 밀크티의 새로운 기준 19티<br />
+                전국을 넘어 세계로 뻗어 나가고 있습니다.
+              </span>
+            </li>
+        </ul>
+      </div>
+  </div>
+  </article>
+  <!--//introductionBox  -->
+  <article id="advantageBox">
+    <h2>19티는 다르다!</h2>
+    <div class="in_text_01">
+      <p>
+        “오늘 당신은 어떤 음료를 드셨나요?”
+        “늘 먹던 뻔한 음료를 드셨나요?”
+        <span>이제 19티가 당신의 기준을 바꿉니다.</span>
+      </p>
+    </div>
+    <div class="in_con_area">
+      <div class="btn_area">
+        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
+        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
+        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
+      </div>
+
+      <div class="in_cup_img"><span>컵모양의 이미지</span></div>
+
+      <div class="in_img"><span>콘텐츠 이미지</span></div>
+      <div class="in_img"><span>콘텐츠 이미지</span></div>
+      <div class="in_img"><span>콘텐츠 이미지</span></div>
+    </div>
+    <div class="in_text_02">
+      <p>
+        19티는  신선하고 품질 좋은 원재료로 <br />
+        <span>“무방부제”</span>, <span>“무색소”</span>, <span>“저칼로리”</span><br />
+        원칙을 지키며 건강하고 맛있는 밀크티<br />
+        한 잔을  제공합니다.
+      </p>
+    </div>
+  </article>
   <footer id="footBox">
     <h2 class="hidden_context">회사정보</h2>
     <address>
@@ -107,6 +163,7 @@
 
  <script src="../js/base/jquery-3.5.1.js"></script>
  <script src="../js/base/jquery-ui.js"></script>
- <script src="../js/src/19tea_brand.js"></script>
+ <script src="../js/src/19tea_rwdTemp.js"></script>
+ <script src="../js/src/19tea_rwdTemp_import_module.js"></script>
 </body>
 </html>
