--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -158,9 +158,9 @@
     <footer id="footBox">
       <h2 class="hidden_context">회사정보</h2>
       <address>
-        <p>(주)참인포텍 대표 : 홍기량 <br />
-          사업자등록번호 : 214-88-18470 <br />
-          서울특별시 강남구 봉은사로 317 <br />
+        <p>(주)참인포텍 대표 : 홍기량
+          사업자등록번호 : 214-88-18470
+          서울특별시 강남구 봉은사로 317
           (논현동, 아모제논현빌딩 8층)</p>
       </address>
       <div class="ect_area">
