--- a/19tea_web/html/19tea_brand.html
+++ b/19tea_web/html/19tea_brand.html
@@ -111,27 +111,25 @@
   <!--//introductionBox  -->
   <article id="advantageBox">
     <h2>19티는 다르다!</h2>
-    <div class="in_text_01">
+    <div class="advantage_text_01">
       <p>
-        “오늘 당신은 어떤 음료를 드셨나요?”
-        “늘 먹던 뻔한 음료를 드셨나요?”
+        “오늘 당신은 어떤 음료를 드셨나요?”<br />
+        “늘 먹던 뻔한 음료를 드셨나요?”<br />
         <span>이제 19티가 당신의 기준을 바꿉니다.</span>
       </p>
     </div>
-    <div class="in_con_area">
-      <div class="btn_area">
-        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
-        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
-        <div class="plus_btn"><button type="button"><span>콘텐츠 보기 버튼</span></button></div>
-      </div>
+    <div class="advantage_con_area">
+      <div class="plus_btn"><button type="button"><span class="hidden_context">콘텐츠 보기 버튼</span></button></div>
+      <div class="plus_btn"><button type="button"><span class="hidden_context">콘텐츠 보기 버튼</span></button></div>
+      <div class="plus_btn"><button type="button"><span class="hidden_context">콘텐츠 보기 버튼</span></button></div>
 
-      <div class="in_cup_img"><span>컵모양의 이미지</span></div>
+      <div class="advantage_cup_img"><span class="hidden_context">컵모양의 이미지</span></div>
 
-      <div class="in_img"><span>콘텐츠 이미지</span></div>
-      <div class="in_img"><span>콘텐츠 이미지</span></div>
-      <div class="in_img"><span>콘텐츠 이미지</span></div>
+      <div class="advantage_img_01"><span class="hidden_context">콘텐츠 이미지</span></div>
+      <div class="advantage_img_02"><span class="hidden_context">콘텐츠 이미지</span></div>
+      <div class="advantage_img_03"><span class="hidden_context">콘텐츠 이미지</span></div>
     </div>
-    <div class="in_text_02">
+    <div class="advantage_text_02">
       <p>
         19티는  신선하고 품질 좋은 원재료로 <br />
         <span>“무방부제”</span>, <span>“무색소”</span>, <span>“저칼로리”</span><br />
