--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -19,6 +19,7 @@
       <li><a href="./jq_01_selector.html">jq_01_selector</a></li>
       <li><a href="./jq_02_showHide.html">jq_02_showHide</a></li>
       <li><a href="./jq_03_makeRemove.html">jq_03_makeRemove</a></li>
+      <li><a href="./jq_04_import.html">jq_04_import</a></li>
       
       <hr />
       <h2>샘플 예제</h2>
@@ -32,6 +33,8 @@
       <li><a href="./ex_05_rwdtemp.html">js를 반응형으로 구현하기</a></li>
       <li><a href="./ex_06_rwd_menu.html">반응형으로 <abbr title="global navigation bar">gnb</abbr>영역구성하기</a></li>
       <li><a href="./ex_07_mousewheel.html">마우스 휠 처리기능</a></li>
+      <li><a href="./ex_08_moreBtn.html">더보기 버튼 클릭</a></li>
+  
       
       <h2>시험예제</h2>
       <li><a href="./test_11_25.html">test_11_25</a></li>
