--- a/19tea_web/html/19tea_brand.html
+++ b/19tea_web/html/19tea_brand.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css파일이름.css">
   <title>Document</title>
 
-  <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
+  <link rel="stylesheet" href="../fonts/fontsasome/css/all.css">
   <link rel="stylesheet" href="../fonts/noto_sans/noto_sans.css">
 
  <link rel="stylesheet" href="../css/base/reset.css">
@@ -125,9 +125,9 @@
 
       <div class="advantage_cup_img"><span class="hidden_context">컵모양의 이미지</span></div>
 
-      <div class="advantage_img_01"><span class="hidden_context">콘텐츠 이미지</span></div>
-      <div class="advantage_img_02"><span class="hidden_context">콘텐츠 이미지</span></div>
-      <div class="advantage_img_03"><span class="hidden_context">콘텐츠 이미지</span></div>
+      <div class="advantage_img advantage_img_01"><span class="hidden_context">콘텐츠 이미지</span></div>
+      <div class="advantage_img advantage_img_02"><span class="hidden_context">콘텐츠 이미지</span></div>
+      <div class="advantage_img advantage_img_03"><span class="hidden_context">콘텐츠 이미지</span></div>
     </div>
     <div class="advantage_text_02">
       <p>
