rem&sub css ing

--- a/19tea_web/html/19tea_main.html
+++ b/19tea_web/html/19tea_main.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!-- 19tea_main.html -->
-<html lang="ko-kr">
+<html lang="ko-KR">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta charset="UTF-8">
 
- <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
  <link rel="stylesheet" href="../fonts/noto_sans/noto_sans.css">
 
  <link rel="stylesheet" href="../css/base/reset.css">
