--- a/19tea_web/html/19tea_brand.html
+++ b/19tea_web/html/19tea_brand.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!-- 문서이름.html -->
+<!-- 19tea_brand.html -->
 <html lang="ko-KR">
 <head>
-  <link rel="stylesheet" href="css파일이름.css">
   <title>Document</title>
 
   <link rel="stylesheet" href="../fonts/fontsasome/css/all.css">
@@ -113,7 +112,7 @@
     <h2>19티는 다르다!</h2>
     <div class="advantage_text_01">
       <p>
-        “오늘 당신은 어떤 음료를 드셨나요?”<br />
+        “오늘 어떤 음료를 드셨나요?”<br />
         “늘 먹던 뻔한 음료를 드셨나요?”<br />
         <span>이제 19티가 당신의 기준을 바꿉니다.</span>
       </p>
@@ -141,9 +140,9 @@
   <footer id="footBox">
     <h2 class="hidden_context">회사정보</h2>
     <address>
-      <p>(주)참인포텍 대표 : 홍기량 <br />
-        사업자등록번호 : 214-88-18470 <br />
-        서울특별시 강남구 봉은사로 317 <br />
+      <p>(주)참인포텍 대표 : 홍기량 
+        사업자등록번호 : 214-88-18470 
+        서울특별시 강남구 봉은사로 317 
         (논현동, 아모제논현빌딩 8층)</p>
     </address>
     <div class="ect_area">
