--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -37,7 +37,8 @@
       <li><a href="./ex_09_notice.html">게시판 만들기</a></li>
       <li><a href="./ex_10_zoom.html">이미지 확대</a></li>
       <li><a href="./ex_11_mousemove.html">mouse move</a></li>
-      <li><a href="./ex_12_mousemove2.html">mouse move2</a></li>
+      <li><a href="./ex_12_mousemove2.html">이미지 움직이기</a></li>
+      <li><a href="./ex_13.landing.html">로딩페이지</a></li>
   
       
       <h2>시험예제</h2>
