pallax1 and pinterest

--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -40,6 +40,8 @@
       <li><a href="./ex_12_mousemove2.html">이미지 움직이기</a></li>
       <li><a href="./ex_13.landing.html">로딩페이지</a></li>
       <li><a href="./ex_14_parallax.html">웹페이지 만들기(fierwatchgame페이지 따라 만들기)</a></li>
+      <li><a href="./ex_15_parallax2.html">parallax2</a></li>
+      <li><a href="./ex_16_like_pinterest.html">핀터레스트 형식 따라 만들기</a></li>
   
       
       <h2>시험예제</h2>
