map & pinterest2ing

--- a/c_code/e_jquery/html/contents.html
+++ b/c_code/e_jquery/html/contents.html
@@ -42,6 +42,8 @@
       <li><a href="./ex_14_parallax.html">웹페이지 만들기(fierwatchgame페이지 따라 만들기)</a></li>
       <li><a href="./ex_15_parallax2.html">parallax2</a></li>
       <li><a href="./ex_16_like_pinterest.html">핀터레스트 형식 따라 만들기</a></li>
+      <li><a href="./ex_17_map.html">카카오 지도 활용하기</a></li>
+      <li><a href="./ex_18_like_pinterest2.html">핀터레스트 형식 따라 만들기2</a></li>
   
       
       <h2>시험예제</h2>
